--- a/simplified-serv/www/upload.html
+++ b/simplified-serv/www/upload.html
@@ -9,8 +9,8 @@
         <label for="file">Choose a file:</label>
         <input type="file" name="file" id="file"><br><br>
         
-        <label for="description">File description:</label>
-        <input type="text" name="description" id="description"><br><br>
+        <!-- <label for="description">File description:</label>
+        <input type="text" name="description" id="description"><br><br> -->
         
         <input type="submit" value="Upload">
     </form>
