--- a/simplified-serv/www/index.html
+++ b/simplified-serv/www/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<form action="http://localhost:8000" method="GET">
+<form action="http://localhost:8000/cgi-bin/script-post-2.py" method="POST">
 	<div>
 	  <label for="say">What</label>
 	  <input name="say" id="say" value="Hi" />
