server download limit is now 500MB

--- a/simplified-serv/www/error/error413.html
+++ b/simplified-serv/www/error/error413.html
@@ -24,7 +24,7 @@
 <body>
     <div class="error-container">
         <h1>413 Payload Too Large</h1>
-        <p>The data you are trying to send in the request is too large and exceeds the server's limit.</p>
+        <p>The data you are trying to send or receive is too large and exceeds the server's limit.</p>
     </div>
 </body>
 </html>
